--- a/lib/vrl/stdlib/Cargo.toml
+++ b/lib/vrl/stdlib/Cargo.toml
@@ -10,7 +10,7 @@ license = "MPL-2.0"
 vrl = { path = "../core" }
 
 base64 = { version = "0.13", optional = true }
-bytes = { version = "0.5.6", optional = true }
+bytes =  { version = "0.5.6", optional = true }
 chrono = { version = "0.4", optional = true }
 cidr-utils = { version = "0.5", optional = true }
 grok = { version = "1", optional = true }
@@ -76,6 +76,7 @@ default = [
     "parse_aws_alb_log",
     "parse_aws_cloudwatch_log_subscription_message",
     "parse_aws_vpc_flow_log",
+    "parse_apache_log",
     "parse_common_log",
     "parse_duration",
     "parse_glog",
@@ -152,6 +153,7 @@ md5 = ["md-5", "hex"]
 merge = []
 now = ["chrono"]
 object = []
+parse_apache_log = ["chrono"]
 parse_aws_alb_log = ["nom"]
 parse_aws_cloudwatch_log_subscription_message = ["serde_json", "shared/aws_cloudwatch_logs_subscription", "shared/btreemap"]
 parse_aws_vpc_flow_log = []
