Update JS build command
Signed-off-by: Luc Perkins <luc@timber.io>

--- a/lib/vrl/wasm/package.json
+++ b/lib/vrl/wasm/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "build": "parcel build ./assets/index.html --no-minify --no-cache",
+    "build": "parcel build ./assets/index.html",
     "start": "parcel ./assets/index.html --no-cache --open"
   },
   "devDependencies": {
