--- a/lib/vrl/wasm/package.json
+++ b/lib/vrl/wasm/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "build": "parcel build ./assets/index.html",
-    "start": "parcel ./assets/index.html --no-cache --open"
+    "start": "parcel ./assets/index.html --open"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
